SERVER-56015 Misleading error message on time-series index creation